added viewport tag, runined the cat pic, and tried to reference masthead

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>About | Gregory DeYoung</title>
   <link rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Gregory DeYoung">
+      <img src="https://github.com/GJDeY/Responsive-Portfolio/blob/master/gregItalyProfPic.jpg" class="auth-image" alt="Gregory DeYoung Pic">
 
       <p>Hi everybody! I grew up just outside of Chicago and became involved with a wide variety of activities when I was young.
         I played numerous sports and was always very interested in people and the way the world works. During my high school
