--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,10 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-
-        <h3>Word Guess</h3>
+        <a href="https://www.google.com">
+          <img src="assets/images/hangmanPic.jpg" alt="Hangman pic">
+          <h3>Word Guess</h3>
+        </a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
@@ -50,7 +51,13 @@
         <h3>Rock Paper Scissors</h3>
       </div>
 
-    </section>
+      <h3>Train Activity</h3>
+  </div>
+  <div class="work">
+    <a href="https://gjdey.github.io/Train_Activity_Basic/">
+      <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Train Activity">
+
+      </section>
 
   </div>
 
