--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         for
         the aforementioned classes at the time, I did further my knowlege in this area with a computer science class
         when
-        attaining my bachelor's degree from the University of Iowa where I foucsed my studies in psychology and
+        attaining my bachelor's degree from the University of Iowa where I focused my studies in psychology and
         business.</p>
 
       <p>I have been in the workforce ever since graduation in a number of different roles and jobs, ranging from
