added background img, fixed typo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         sales. I am also an avid investor and trader, particularly interseted in FinTech and AI.</p>
 
       <p>I am extremely excited and blessed to have been given the opportunity at Northwestern University to jump into
-        a new career as a full-stack web developer! I am certainly looking forward
+        a new career as a full stack web developer! I am certainly looking forward
         to the future with the plethora of new and valuable skills I have learned!</p>
 
     </section>
